--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZfNw4mtRDder+YTMcdQa9",
+      "authorship_tag": "ABX9TyMb1rbTIlwgxQZDxe3E5ksr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -895,7 +895,7 @@
       "metadata": {
         "id": "M0QSizHO_mLq"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -911,7 +911,7 @@
       "metadata": {
         "id": "pk3hv-Fyt8yu"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -930,7 +930,7 @@
       "metadata": {
         "id": "Wlb9_ZRcuxn3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +951,7 @@
       "metadata": {
         "id": "rJZ0ZFJv1ELl"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -965,7 +965,7 @@
       "metadata": {
         "id": "_QF0FLzm2iD8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -997,7 +997,7 @@
       "metadata": {
         "id": "Yz42L75l8RvC"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1018,7 +1018,7 @@
       "metadata": {
         "id": "fa43Psz7jEIV"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1038,7 +1038,31 @@
       "metadata": {
         "id": "r3_-Rm-EkbZ4"
       },
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def palindromeNumber(x:int):\n",
+        "\n",
+        "  if x <0 or (x !=0 and x%10==0):\n",
+        "    return False\n",
+        "\n",
+        "  num = x \n",
+        "  y = 0 \n",
+        "\n",
+        "  while num !=0:\n",
+        "    rem = num%10\n",
+        "    num = num/10\n",
+        "    y = y*10+rem \n",
+        "\n",
+        "  return y == x"
+      ],
+      "metadata": {
+        "id": "w394Zo85Nasj"
+      },
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1048,6 +1072,17 @@
       ],
       "metadata": {
         "id": "UUstRPOkR34-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "jqx1_q7aOYys"
       },
       "execution_count": null,
       "outputs": []
@@ -1072,7 +1107,7 @@
         "id": "QMj5HT9wr9yu",
         "outputId": "3b1eb991-9a82-46f2-e1c6-b3f3e0a3d47a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
