--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMb1rbTIlwgxQZDxe3E5ksr",
+      "authorship_tag": "ABX9TyMCQ31KJ9NWICL/cNirsSgL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1062,29 +1062,288 @@
       "metadata": {
         "id": "w394Zo85Nasj"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def wordSearch(board,word):\n",
+        "\n",
+        "  def dfs(board,row,col,word):\n",
+        "    if len(board) ==0:\n",
+        "      return True \n",
+        "    if row < 0 or row >=len(board) or col <0 or col >= len(board[0]) or board[row][col] != word[0]:\n",
+        "      return False \n",
+        "\n",
+        "    temp = board[row][col]\n",
+        "    board[row][col] = ' '\n",
+        "\n",
+        "    if dfs(board,row+1,col,word[1:]) or dfs(board,row+1,col,word[1:]) or dfs(board,row+1,col,word[1:]) or dfs(board,row+1,col,word[1:]):\n",
+        "      return True \n",
+        "    \n",
+        "    board[row][col] = temp \n",
+        "\n",
+        "    return False \n",
+        "    \n",
+        "  for row in range(len(board)):\n",
+        "    for col in range(len(board[0])):\n",
+        "      if board[row][col] == word[0] and dfs(board,row,col,word):\n",
+        "        return True \n",
+        "  return False "
       ],
       "metadata": {
         "id": "UUstRPOkR34-"
       },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def subArraySum(nums,k):\n",
+        "  dic = defaultdict(int)\n",
+        "  dic.setdefault(0,1)\n",
+        "  summ = 0\n",
+        "  count = 0\n",
+        "\n",
+        "  for num in nums:\n",
+        "    summ += num \n",
+        "    temp = summ -k \n",
+        "\n",
+        "    if temp in dic:\n",
+        "      count +=dic.get(temp)\n",
+        "    dic[summ] +=1\n",
+        "  \n",
+        "  return count \n",
+        "      "
+      ],
+      "metadata": {
+        "id": "3BKFCGcGqqEQ"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def houseRobber(nums):\n",
+        "\n",
+        "  if len(nums) == 1:\n",
+        "    return nums[0]\n",
+        "  if len(nums) == 2:\n",
+        "    return max(nums[0],nums[1])\n",
+        "  dp = [nums[0],max(nums[0],nums[1])]\n",
+        "\n",
+        "  for i in range(2,len(nums)):\n",
+        "    dp.append(max(dp[i-2]+nums[i],dp[i-1]))\n",
+        "  \n",
+        "  return dp.pop()"
+      ],
+      "metadata": {
+        "id": "oD1YnV3Orfpl"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def removeElement(head:Node,val:int):\n",
+        "  dummy = Node(0)\n",
+        "  result = dummy \n",
+        "  dummy.next = head \n",
+        "\n",
+        "  while head is not None: \n",
+        "    if head.val == val:\n",
+        "      head = head.next \n",
+        "      dummy.next = head\n",
+        "    else:\n",
+        "      head = head.next \n",
+        "      dummy = dummy.next\n",
+        "  return result.next \n"
+      ],
+      "metadata": {
+        "id": "mT6vdoENsFvX",
+        "outputId": "1bbf3934-e1dc-4257-9889-8d9b12ca4a01",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-c27d03b1d00d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mremoveElement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mNode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mdummy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdummy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mdummy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhead\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Node' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rotateArray(nums,k):\n",
+        "\n",
+        "  k = k%len(nums)\n",
+        "  def helper(nums,left,right):\n",
+        "    while left < right:\n",
+        "      nums[right],nums[left] = nums[left],nums[right]\n",
+        "      left +=1\n",
+        "      right -=1\n",
+        "  helper(nums,0,len(nums)-1)\n",
+        "  helper(nums,0,k-1)\n",
+        "  helper(nums,k,len(nums)-1)\n",
+        "\n",
+        "  return nums"
+      ],
+      "metadata": {
+        "id": "5SlHjbgdtnpk"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def maxProfit(prices):\n",
+        "  profit = 0\n",
+        "  cheapest_price = prices[0]\n",
+        "  for price in prices:\n",
+        "    cheapest_price = min(cheapest_price,price)\n",
+        "    currentProfit = price-cheapest_price\n",
+        "    profit = max(profit,currentProfit)\n",
+        "  return profit"
       ],
       "metadata": {
-        "id": "jqx1_q7aOYys"
+        "id": "o4_ZwLn9s_pC"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def palindromeLinkedList(head:Node):\n",
+        "\n",
+        "  res = []\n",
+        "\n",
+        "  while head is not None:\n",
+        "    res.append(head.val)\n",
+        "    head = head.next \n",
+        "  \n",
+        "  left =0\n",
+        "  right = len(res)-1\n",
+        "  while left <right:\n",
+        "    if res[left] != res[right]:\n",
+        "      return False \n",
+        "\n",
+        "    left +=1\n",
+        "    right -=1\n",
+        "  return True "
+      ],
+      "metadata": {
+        "id": "jqx1_q7aOYys",
+        "outputId": "a930d666-126d-4e5b-bf52-3ce69cfd977d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-a8f3b783dbae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mpalindromeLinkedList\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mNode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mhead\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Node' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maxSubArray(nums):\n",
+        "  maxSum = nums[0]\n",
+        "  currentSum = nums[0]\n",
+        "\n",
+        "  for i in range(1,len(nums)):\n",
+        "    currentSum = max(currentSum+nums[i])\n",
+        "    maxSum = max(currentSum,maxSum)\n",
+        "  \n",
+        "  return maxSum"
+      ],
+      "metadata": {
+        "id": "oiD0ERPvxldp"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def canAttendMeetings(intervals):\n",
+        "  intervals.sort()\n",
+        "\n",
+        "  def isOverlap(x,y):\n",
+        "    return not (x[1]<y[0] or y[1]<x[0])\n",
+        "\n",
+        "  for i in range(len(intervals)-1):\n",
+        "    if isOverlap(intervals[i],intervals[i+1]):\n",
+        "      return False \n",
+        "  return True "
+      ],
+      "metadata": {
+        "id": "XGPQ7Ikm1wpG"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TreeNode:\n",
+        "  def __init__(self,left=None,right=None,val=0) -> None:\n",
+        "      self.left = left\n",
+        "      self.right = right \n",
+        "      "
+      ],
+      "metadata": {
+        "id": "HsDcPsqW3RTB"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import inf \n",
+        "def validateBST(root:TreeNode):\n",
+        "\n",
+        "  def dfs(root,min_val,max_val):\n",
+        "    if not root:\n",
+        "      return True \n",
+        "    if root.val <= min_val and root.val >= max_val:\n",
+        "      return False \n",
+        "    return dfs(root.left,min_val,root.val) and dfs(root.right,root.val,max_val)\n",
+        "  \n",
+        "  return dfs(root,-inf,inf)"
+      ],
+      "metadata": {
+        "id": "SOo8fYfH4BlM"
+      },
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1121,7 +1380,28 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class BacktrackingSolutions():\n",
+        "\n",
+        "  def permute(self,s:str):\n",
+        "\n",
+        "    def dfs(self,path,used,res):\n",
+        "      if len(path) == len(s):\n",
+        "        res.append(path[:])\n",
+        "        return \n",
+        "      for i,char in enumerate(s):\n",
+        "        if used[i]:\n",
+        "          continue\n",
+        "        path.append(char)\n",
+        "        used[i] = True \n",
+        "\n",
+        "        dfs(path,used,res)\n",
+        "        path.pop()\n",
+        "        used[i] = False \n",
+        "    res= []\n",
+        "    self.dfs([],[False]*len(s),res)\n",
+        "\n",
+        "    return res \n",
+        "        "
       ],
       "metadata": {
         "id": "tvxcAnHSsjgV"
