--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCQ31KJ9NWICL/cNirsSgL",
+      "authorship_tag": "ABX9TyN4omyZZNElVQNLNhiMCO/S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1164,12 +1164,12 @@
         "  return result.next \n"
       ],
       "metadata": {
-        "id": "mT6vdoENsFvX",
-        "outputId": "1bbf3934-e1dc-4257-9889-8d9b12ca4a01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "mT6vdoENsFvX",
+        "outputId": "1bbf3934-e1dc-4257-9889-8d9b12ca4a01"
       },
       "execution_count": 5,
       "outputs": [
@@ -1250,11 +1250,11 @@
       ],
       "metadata": {
         "id": "jqx1_q7aOYys",
-        "outputId": "a930d666-126d-4e5b-bf52-3ce69cfd977d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "outputId": "a930d666-126d-4e5b-bf52-3ce69cfd977d"
       },
       "execution_count": 7,
       "outputs": [
@@ -1400,13 +1400,263 @@
         "    res= []\n",
         "    self.dfs([],[False]*len(s),res)\n",
         "\n",
-        "    return res \n",
+        "    return res\n",
+        "\n",
+        "  def wordBreak(self,s,dictWord):\n",
+        "\n",
+        "    def dfs(i):\n",
+        "      if i == len(s):\n",
+        "        return True\n",
+        "\n",
+        "      for word in dictWord:\n",
+        "        if s[i:].startswith(word):\n",
+        "          if dfs(i+len(word)):\n",
+        "            return True \n",
+        "      return False \n",
+        "\n",
+        "    dfs(0)\n",
+        "\n",
         "        "
       ],
       "metadata": {
         "id": "tvxcAnHSsjgV"
       },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class QueueUsingStack():\n",
+        "\n",
+        "  def __init__(self) -> None:\n",
+        "      self.stack = []\n",
+        "      self.queue = []\n",
+        "\n",
+        "  def push(self,x):\n",
+        "    self.stack.append(x)\n",
+        "  \n",
+        "  def peek(self):\n",
+        "    if not self.queue:\n",
+        "      while self.stack:\n",
+        "        self.queue.append(self.stack.pop())\n",
+        "    return self.queue[-1]\n",
+        "  \n",
+        "  def pop(self):\n",
+        "    self.peek()\n",
+        "    self.queue.pop()"
+      ],
+      "metadata": {
+        "id": "QDiLpb3F9xWs"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def uniquePath(m: int, n: int) -> int:\n",
+        "  dp = [[1 for col in range(m)] for row in range(n)]\n",
+        "  for row in range(1, n):\n",
+        "      for col in range(1, m):\n",
+        "          dp[row][col] = dp[row][col - 1] + dp[row - 1][col]\n",
+        "\n",
+        "  return dp[-1][-1]"
+      ],
+      "metadata": {
+        "id": "H5IiYrOAAnht"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BinarySearch:\n",
+        "\n",
+        "  def searchInRotatedSortedArray(nums,target):\n",
+        "\n",
+        "    left = 0\n",
+        "    right = len(nums)-1\n",
+        "\n",
+        "    while left <= right:\n",
+        "      mid = (right+left)//2 \n",
+        "\n",
+        "      if nums[mid] == target:\n",
+        "        return mid \n",
+        "      else:\n",
+        "        if nums[mid] > nums[left]:\n",
+        "          if target <= nums[mid] and target >= nums[left]:\n",
+        "            right = mid-1\n",
+        "          else:\n",
+        "            left = mid+1\n",
+        "        else:\n",
+        "          if target >= nums[mid] and target <= nums[right]:\n",
+        "            left = mid+1\n",
+        "          else:\n",
+        "            right = mid-1\n",
+        "    return -1 "
+      ],
+      "metadata": {
+        "id": "Wzyadbkz8J23"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def findMissingNumber(nums):\n",
+        "  num_set = set(nums)\n",
+        "\n",
+        "  n = len(nums)+1\n",
+        "\n",
+        "  for i in range(n):\n",
+        "    if i not in num_set:\n",
+        "      return i \n",
+        "  return -1"
+      ],
+      "metadata": {
+        "id": "HJYWm8h4Hxca"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def isAnagram(s1,s2):\n",
+        "  dic= [0]*26 \n",
+        "\n",
+        "  for char in s1:\n",
+        "    ch = ord(char)-ord('a')\n",
+        "    dic[ch] +=1\n",
+        "\n",
+        "  for char in s2:\n",
+        "    ch = ord(char)-ord('a')\n",
+        "    dic[ch] -=1\n",
+        "  \n",
+        "  for item in dic:\n",
+        "    if item !=0:\n",
+        "      return False \n",
+        "  return True "
+      ],
+      "metadata": {
+        "id": "Vq9mTPwKIRo7"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "  print(isAnagram(\"abbbaa\",\"bbaab\"))"
+      ],
+      "metadata": {
+        "id": "uYN2MPjbIqsr",
+        "outputId": "dc8a18e1-7786-4b48-dc2d-6a6c26c6cac3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def validateSudoku(board):\n",
+        "\n",
+        "  myset = set()\n",
+        "\n",
+        "  for row in range(len(board)):\n",
+        "    for col in range(len(board[0])):\n",
+        "      current = board[row][col]\n",
+        "      if current != \".\":\n",
+        "\n",
+        "        if \"row\"+row+current not in myset:\n",
+        "          pass \n"
+      ],
+      "metadata": {
+        "id": "Bx82k1kWKvyX"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def addTwoNumbers(l1,l2):\n",
+        "  dummy = Node()\n",
+        "  result = dummy \n",
+        "\n",
+        "  carry =0 \n",
+        "\n",
+        "  while l1 is not None or l2 is not None or carry !=0:\n",
+        "    if l1:\n",
+        "      carry +=l1.val \n",
+        "      l1 = l1.next\n",
+        "    if l2:\n",
+        "      carry +=l2.val\n",
+        "      l2 = l2.next\n",
+        "    \n",
+        "    dummy.next = Node(carry%10)\n",
+        "    carry = carry/10 \n",
+        "\n",
+        "    dummy = dummy.next \n",
+        "\n",
+        "    return result.next "
+      ],
+      "metadata": {
+        "id": "SRWlcCfuMFp2"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "def frequencySort(s:str):\n",
+        "  dic = Counter(s)\n",
+        "  s = list(s)\n",
+        "\n",
+        "  s.sort(key=lambda x:(-dic[x],x))\n",
+        "\n",
+        "  return \"\".join(s)"
+      ],
+      "metadata": {
+        "id": "w9iJSUYRNQQ1"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def transposeMatrix(A):\n",
+        "  row = len(A)\n",
+        "  col = len(A[0])\n",
+        "  output = A[col][row]\n",
+        "\n",
+        "  for row in range(len(A)):\n",
+        "    for col in range(len(A[0])):\n",
+        "      output[col][row] = A[row][col]\n",
+        "  return output "
+      ],
+      "metadata": {
+        "id": "AhEdePSBOXK8"
+      },
+      "execution_count": 26,
       "outputs": []
     }
   ]
