--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGqz969MAj016KOoc/XCsH",
+      "authorship_tag": "ABX9TyOouWok4VJ+HfD3Repf/0OK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1917,6 +1917,86 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The finalize() method is a protected and non-static method of the java.lang.Object class and is also sometimes called the finalizer. The finalize() method is invoked by the JVM when an object is garbage collected. A user can override the finalize() in his class to dispose of system resources or to perform cleanup tasks.\n",
+        "\n",
+        "**Generics **\n",
+        "Generics help with the following use-cases\n",
+        "\n",
+        "Enforcing stronger type checking at compile time for greater type-safety\n",
+        "\n",
+        "Elimination of casts\n",
+        "\n",
+        "Implementation of generic algorithms\n",
+        "\n",
+        "\n",
+        "\n",
+        "A mutex allows only a single thread to access a resource. It forces competing threads to serialize their access for the requested resource.\n",
+        "\n",
+        "Semaphore, on the other hand, is used for limiting access to a collection of resources. Think of semaphore as having a limited number of permits to give out. If a semaphore has given out all the permits it has, then any new thread that comes along requesting for a permit will be blocked, till an earlier thread with a permit returns it to the semaphore\n",
+        "\n",
+        "\n",
+        "\n",
+        "Java’s most fundamental construct for thread synchronization is the synchronized keyword. It can be used to restrict access to critical sections one thread at a time.\n",
+        "\n",
+        "Each object in Java has an entity associated with it called the monitor lock or just monitor. Think of it as an exclusive lock. Once a thread gets hold of the monitor of an object, it has exclusive access to all the methods marked as synchronized. No other thread will be allowed to invoke a method on the object that is marked as synchronized and will block, till the first thread releases the monitor which is equivalent of the first thread exiting the synchronized method.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Explain the garbage collection process in Java.\n",
+        "\n",
+        "Whenever a new object is created, it is allocated its space in the Eden memory. The Eden memory is limited and fills up fast. Initially, both the survivor spaces are empty. Let's call them survivor space A and B to distinguish between them.\n",
+        "\n",
+        "When the garbage collector runs for the first time, it marks alive objects in Eden memory and any unused objects are collected as garbage. The objects surviving the garbage collector run are placed in one of the survivor spaces. For our example let's imagine they are placed in survivor space A.\n",
+        "\n",
+        "On the second run of the GC the surviving objects from the Eden memory and the survivor memory A are placed in the unused survivor memory B.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Java Reflection makes it possible to inspect classes, interfaces, fields, and methods at runtime, without knowing the names of the classes, methods etc. at compile time. It is also possible to instantiate new objects, invoke methods and get/set field values using reflection."
+      ],
+      "metadata": {
+        "id": "BBX0kbiHuziN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def firstBadVersion(n:int):\n",
+        "  def isBadVersion(version:int):\n",
+        "    pass \n",
+        "  \n",
+        "  left = 1\n",
+        "  right = n \n",
+        "\n",
+        "  while left < right:\n",
+        "    mid = (left+right)//2\n",
+        "    if not isBadVersion(mid):\n",
+        "      lelft = mid+1\n",
+        "    else:\n",
+        "      right = mid \n",
+        "  return left "
+      ],
+      "metadata": {
+        "id": "F2p1DQt1wG1S"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_ceesvATyAha"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
@@ -1939,6 +2019,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "-XxLwiYEwFfL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
