--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOouWok4VJ+HfD3Repf/0OK",
+      "authorship_tag": "ABX9TyN7MZfq65KN65Q7HgCraFfV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1166,7 +1166,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 240
         },
         "id": "mT6vdoENsFvX",
         "outputId": "1bbf3934-e1dc-4257-9889-8d9b12ca4a01"
@@ -1252,7 +1252,7 @@
         "id": "jqx1_q7aOYys",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 240
         },
         "outputId": "a930d666-126d-4e5b-bf52-3ce69cfd977d"
       },
@@ -1955,7 +1955,77 @@
         "\n",
         "\n",
         "\n",
-        "Java Reflection makes it possible to inspect classes, interfaces, fields, and methods at runtime, without knowing the names of the classes, methods etc. at compile time. It is also possible to instantiate new objects, invoke methods and get/set field values using reflection."
+        "Java Reflection makes it possible to inspect classes, interfaces, fields, and methods at runtime, without knowing the names of the classes, methods etc. at compile time. It is also possible to instantiate new objects, invoke methods and get/set field values using reflection.\n",
+        "\n",
+        "\n",
+        "When to use it?\n",
+        "Anonymous class is only created for one-time use, we cannot reuse it. Let us consider some scenario\n",
+        "\n",
+        "When your only purpose is to override a method.\n",
+        "When you want to implement any functional interface. (We will see it with the help of real-world implementation).\n",
+        "\n",
+        "\n",
+        "What is Anonymous classes?\n",
+        "Java Anonymous inner class is an inner class without a name and for which only a single object is created.\n",
+        "\n",
+        "It works just like the local class, all restrictions remain the same for its members.\n",
+        "\n",
+        "You can declare the following inside an anonymous class.\n",
+        "\n",
+        "Property (fields)\n",
+        "Methods (Only instance methods), even if they do not implement any methods of the supertype.\n",
+        "Instance initializer\n",
+        "Local classes\n",
+        "\n",
+        "class Solution:\n",
+        "    def findPeakElement(self, nums: List[int]) -> int:\n",
+        "        \n",
+        "        left =0\n",
+        "        right = len(nums)-1\n",
+        "        while left < right:\n",
+        "            mid = (left+right)//2\n",
+        "            if nums[mid] < nums[mid+1]:\n",
+        "                left = mid+1\n",
+        "            else:\n",
+        "                right = mid\n",
+        "        \n",
+        "        return left \n",
+        "        \n",
+        "\n",
+        "  class Solution:\n",
+        "    def findMin(self, nums: List[int]) -> int:\n",
+        "        \n",
+        "        right = len(nums)-1\n",
+        "        left =0\n",
+        "        \n",
+        "        while left+1 < right:\n",
+        "            mid = (left+right)//2\n",
+        "            \n",
+        "            if nums[mid] < nums[right]:\n",
+        "                right = mid\n",
+        "            else:\n",
+        "                left = mid\n",
+        "        return min(nums[left],nums[right]\n",
+        "\n",
+        "class Solution:\n",
+        "    def findAnagrams(self, s: str, p: str) -> List[int]:\n",
+        "        ns, np = len(s), len(p)\n",
+        "        output = []\n",
+        "        if ns < np:\n",
+        "            return []\n",
+        "        p_count, s_count = [0] * 26, [0] * 26 \n",
+        "        for ch in p:\n",
+        "            p_count[ord(ch) - ord('a')] += 1\n",
+        "        \n",
+        "        for i in range(ns):\n",
+        "            s_count[ord(s[i]) - ord('a')] += 1\n",
+        "            \n",
+        "            if i >= np:\n",
+        "                s_count[ord(s[i - np]) - ord('a')] -= 1\n",
+        "            if p_count == s_count:\n",
+        "                output.append(i - np + 1)\n",
+        "        \n",
+        "        return output"
       ],
       "metadata": {
         "id": "BBX0kbiHuziN"
