--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7MZfq65KN65Q7HgCraFfV",
+      "authorship_tag": "ABX9TyO4yh1Qxwo/cPzgDNaXq35q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1934,48 +1934,9 @@
         "\n",
         "A mutex allows only a single thread to access a resource. It forces competing threads to serialize their access for the requested resource.\n",
         "\n",
-        "Semaphore, on the other hand, is used for limiting access to a collection of resources. Think of semaphore as having a limited number of permits to give out. If a semaphore has given out all the permits it has, then any new thread that comes along requesting for a permit will be blocked, till an earlier thread with a permit returns it to the semaphore\n",
+        "Semaphore, on the other hand, is used for limiting access to a collection of resources. Think of semaphore as having a limited number of permits to give out. If a semaphore has given out all the permits it has, then any new thread that comes along requesting for a permit will be blocked, till an earlier thread with a permit returns it to the semaphor\n",
         "\n",
         "\n",
-        "\n",
-        "Java’s most fundamental construct for thread synchronization is the synchronized keyword. It can be used to restrict access to critical sections one thread at a time.\n",
-        "\n",
-        "Each object in Java has an entity associated with it called the monitor lock or just monitor. Think of it as an exclusive lock. Once a thread gets hold of the monitor of an object, it has exclusive access to all the methods marked as synchronized. No other thread will be allowed to invoke a method on the object that is marked as synchronized and will block, till the first thread releases the monitor which is equivalent of the first thread exiting the synchronized method.\n",
-        "\n",
-        "\n",
-        "\n",
-        "Explain the garbage collection process in Java.\n",
-        "\n",
-        "Whenever a new object is created, it is allocated its space in the Eden memory. The Eden memory is limited and fills up fast. Initially, both the survivor spaces are empty. Let's call them survivor space A and B to distinguish between them.\n",
-        "\n",
-        "When the garbage collector runs for the first time, it marks alive objects in Eden memory and any unused objects are collected as garbage. The objects surviving the garbage collector run are placed in one of the survivor spaces. For our example let's imagine they are placed in survivor space A.\n",
-        "\n",
-        "On the second run of the GC the surviving objects from the Eden memory and the survivor memory A are placed in the unused survivor memory B.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Java Reflection makes it possible to inspect classes, interfaces, fields, and methods at runtime, without knowing the names of the classes, methods etc. at compile time. It is also possible to instantiate new objects, invoke methods and get/set field values using reflection.\n",
-        "\n",
-        "\n",
-        "When to use it?\n",
-        "Anonymous class is only created for one-time use, we cannot reuse it. Let us consider some scenario\n",
-        "\n",
-        "When your only purpose is to override a method.\n",
-        "When you want to implement any functional interface. (We will see it with the help of real-world implementation).\n",
-        "\n",
-        "\n",
-        "What is Anonymous classes?\n",
-        "Java Anonymous inner class is an inner class without a name and for which only a single object is created.\n",
-        "\n",
-        "It works just like the local class, all restrictions remain the same for its members.\n",
-        "\n",
-        "You can declare the following inside an anonymous class.\n",
-        "\n",
-        "Property (fields)\n",
-        "Methods (Only instance methods), even if they do not implement any methods of the supertype.\n",
-        "Instance initializer\n",
-        "Local classes\n",
         "\n",
         "class Solution:\n",
         "    def findPeakElement(self, nums: List[int]) -> int:\n",
@@ -2032,6 +1993,48 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Java Reflection makes it possible to inspect classes, interfaces, fields, and methods at runtime, without knowing the names of the classes, methods etc. at compile time. It is also possible to instantiate new objects, invoke methods and get/set field values using reflection.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "When to use it?\n",
+        "Anonymous class is only created for one-time use, we cannot reuse it. Let us consider some scenario\n",
+        "\n",
+        "When your only purpose is to override a method.\n",
+        "When you want to implement any functional interface. (We will see it with the help of real-world implementation)."
+      ],
+      "metadata": {
+        "id": "wA_XoYSEB5zs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Explain the garbage collection process in Java.\n",
+        "\n",
+        "Whenever a new object is created, it is allocated its space in the Eden memory. The Eden memory is limited and fills up fast. Initially, both the survivor spaces are empty. Let's call them survivor space A and B to distinguish between them.\n",
+        "\n",
+        "When the garbage collector runs for the first time, it marks alive objects in Eden memory and any unused objects are collected as garbage. The objects surviving the garbage collector run are placed in one of the survivor spaces. For our example let's imagine they are placed in survivor space A.\n",
+        "\n",
+        "On the second run of the GC the surviving objects from the Eden memory and the survivor memory A are placed in the unused survivor memory B."
+      ],
+      "metadata": {
+        "id": "fTVuXosDB0nF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "FvSd1CsXBnVY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def firstBadVersion(n:int):\n",
@@ -2065,6 +2068,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Java’s most fundamental construct for thread synchronization is the synchronized keyword. It can be used to restrict access to critical sections one thread at a time.\n",
+        "\n",
+        "Each object in Java has an entity associated with it called the monitor lock or just monitor. Think of it as an exclusive lock. Once a thread gets hold of the monitor of an object, it has exclusive access to all the methods marked as synchronized. No other thread will be allowed to invoke a method on the object that is marked as synchronized and will block, till the first thread releases the monitor which is equivalent of the first thread exiting the synchronized method."
+      ],
+      "metadata": {
+        "id": "qKm3kEFABv30"
+      }
     },
     {
       "cell_type": "code",
