--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4yh1Qxwo/cPzgDNaXq35q",
+      "authorship_tag": "ABX9TyPxyen4Q0t8IYfUg571PRrd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2103,6 +2103,33 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Projects-\n",
+        "1. Automated solutions for certifying multiple customers to increase volumes and velocity of testing \n",
+        "2. Improved Test reporting through report classifications to reduce test results analysis\n",
+        "3. Work with team to develop accessibility testing solutions through development of engines and UI components that abstract three major accessibility tools together via API to increase productivity and improve accuracy of testing across all teams \n",
+        "4. Develop performance tests solutions to test replications and load distributions for merchant groups which impacts over 20 customers across UI. \n",
+        "    1. Improve load distributions to multiple servers\n",
+        "    2. Scale to more DB operations to ensure applications fails gracefully under heavy loads\n",
+        "5. Developed code quality toolings\n",
+        "\n",
+        "\n",
+        "\n",
+        "Mocking HTTP requests\n",
+        "Why we mock:\n",
+        "1. Speed \n",
+        "2. Avoid rate limit - how many requests within some minutes range can this API take?\n",
+        "3. Error Scenarios\n",
+        "4. Deterministic \n",
+        "5. Avoid modifying state \n",
+        "6. Testing and TDD "
+      ],
+      "metadata": {
+        "id": "2Z-50aZfFW28"
+      }
     },
     {
       "cell_type": "code",
