--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxyen4Q0t8IYfUg571PRrd",
+      "authorship_tag": "ABX9TyPgxWhKD6aHxngPwkeeCdx1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -439,6 +439,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "def combination_sum(candidates: List[int], target: int) -> List[List[int]]:\n",
+        "  def dfs(nums, start_index, remaining, path):\n",
+        "      if remaining == 0:\n",
+        "          res.append(path[:])\n",
+        "          return\n",
+        "      for i in range(start_index, len(nums)):\n",
+        "          num = nums[i]\n",
+        "          if remaining - num < 0:\n",
+        "              continue\n",
+        "          dfs(nums, i, remaining - num, path + [num])\n",
+        "  res = []\n",
+        "  dfs(candidates, 0, target, [])\n",
+        "  return res\n"
+      ],
+      "metadata": {
+        "id": "ydKITy9e27rw"
+      },
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1095,7 +1120,7 @@
       "metadata": {
         "id": "UUstRPOkR34-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1121,7 +1146,7 @@
       "metadata": {
         "id": "3BKFCGcGqqEQ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1143,7 +1168,7 @@
       "metadata": {
         "id": "oD1YnV3Orfpl"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1171,7 +1196,7 @@
         "id": "mT6vdoENsFvX",
         "outputId": "1bbf3934-e1dc-4257-9889-8d9b12ca4a01"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1224,7 +1249,7 @@
       "metadata": {
         "id": "o4_ZwLn9s_pC"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1256,7 +1281,7 @@
         },
         "outputId": "a930d666-126d-4e5b-bf52-3ce69cfd977d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1287,7 +1312,7 @@
       "metadata": {
         "id": "oiD0ERPvxldp"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1307,7 +1332,7 @@
       "metadata": {
         "id": "XGPQ7Ikm1wpG"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1322,7 +1347,7 @@
       "metadata": {
         "id": "HsDcPsqW3RTB"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1343,7 +1368,7 @@
       "metadata": {
         "id": "SOo8fYfH4BlM"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1421,7 +1446,7 @@
       "metadata": {
         "id": "tvxcAnHSsjgV"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1449,7 +1474,7 @@
       "metadata": {
         "id": "QDiLpb3F9xWs"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1500,7 +1525,7 @@
       "metadata": {
         "id": "Wzyadbkz8J23"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1519,7 +1544,7 @@
       "metadata": {
         "id": "HJYWm8h4Hxca"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1544,7 +1569,7 @@
       "metadata": {
         "id": "Vq9mTPwKIRo7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1560,7 +1585,7 @@
         "id": "uYN2MPjbIqsr",
         "outputId": "dc8a18e1-7786-4b48-dc2d-6a6c26c6cac3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1589,7 +1614,7 @@
       "metadata": {
         "id": "Bx82k1kWKvyX"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1619,7 +1644,7 @@
       "metadata": {
         "id": "SRWlcCfuMFp2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1637,7 +1662,7 @@
       "metadata": {
         "id": "w9iJSUYRNQQ1"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1656,7 +1681,7 @@
       "metadata": {
         "id": "AhEdePSBOXK8"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1691,7 +1716,7 @@
       "metadata": {
         "id": "m4gsEafjQ46o"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1707,7 +1732,7 @@
       "metadata": {
         "id": "Le7G6lPnSE7a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1722,7 +1747,7 @@
       "metadata": {
         "id": "5Lb8ZzLZTWFK"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1745,7 +1770,7 @@
       "metadata": {
         "id": "_9OeA9tyU6XG"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1773,7 +1798,7 @@
       "metadata": {
         "id": "zw3bbk00VbGO"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1794,7 +1819,7 @@
       "metadata": {
         "id": "bN0NvHAwXHmr"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1810,7 +1835,7 @@
         "id": "Jrt1M2pSXRAK",
         "outputId": "fdf7972a-3e83-475a-c979-4c82e5b071f6"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1840,7 +1865,7 @@
       "metadata": {
         "id": "nEUewecdYrX_"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1857,7 +1882,7 @@
       "metadata": {
         "id": "rmzrYQ-ba5hd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1878,7 +1903,7 @@
       "metadata": {
         "id": "3-ylb8X5auhr"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1897,7 +1922,7 @@
       "metadata": {
         "id": "a9GnfBf8c2do"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1913,7 +1938,7 @@
       "metadata": {
         "id": "XzYmX6XJnPEl"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2055,7 +2080,7 @@
       "metadata": {
         "id": "F2p1DQt1wG1S"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2093,7 +2118,7 @@
         "id": "QrD-iWNFSFSX",
         "outputId": "b105dc50-6285-49fc-9933-9b076431867a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
