--- a/spark.ipynb
+++ b/spark.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "spark.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkZ8lFVnlVn0DL+9WMmsOH",
+      "authorship_tag": "ABX9TyMh6YOa1zo0G0nfWMhBXDLz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "NQM_Lw-6LFPZ",
-        "outputId": "cdab8517-90fb-4509-b176-c70f11bee358"
+        "id": "HfnmI2dHqgK2",
+        "outputId": "c54b5e05-e521-468a-a598-1876e358ca1a"
       },
       "outputs": [
         {
@@ -44,18 +44,18 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
-            "  Downloading pyspark-3.2.1.tar.gz (281.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 281.4 MB 34 kB/s \n",
-            "\u001b[?25hCollecting py4j==0.10.9.3\n",
-            "  Downloading py4j-0.10.9.3-py2.py3-none-any.whl (198 kB)\n",
-            "\u001b[K     |████████████████████████████████| 198 kB 45.8 MB/s \n",
+            "  Downloading pyspark-3.3.0.tar.gz (281.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 281.3 MB 37 kB/s \n",
+            "\u001b[?25hCollecting py4j==0.10.9.5\n",
+            "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
+            "\u001b[K     |████████████████████████████████| 199 kB 62.4 MB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.2.1-py2.py3-none-any.whl size=281853642 sha256=868f7475b29538578a727d71696b2f6ac98a3d65e93826524293b3466bf956f1\n",
-            "  Stored in directory: /root/.cache/pip/wheels/9f/f5/07/7cd8017084dce4e93e84e92efd1e1d5334db05f2e83bcef74f\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.0-py2.py3-none-any.whl size=281764026 sha256=93fdb7ce389917bc7294707ea00bb5a4c8214f083e706e1910500bdf1bde49a0\n",
+            "  Stored in directory: /root/.cache/pip/wheels/7a/8e/1b/f73a52650d2e5f337708d9f6a1750d451a7349a867f928b885\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
-            "Successfully installed py4j-0.10.9.3 pyspark-3.2.1\n"
+            "Successfully installed py4j-0.10.9.5 pyspark-3.3.0\n"
           ]
         }
       ],
@@ -64,14 +64,34 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import "
+        "# New Section"
       ],
       "metadata": {
-        "id": "_cWlcNcpLhA5"
+        "id": "ZB1SMXO3sLIo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql import SparkSession"
+      ],
+      "metadata": {
+        "id": "FBhAl7Zevw1d"
       },
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark = SparkSession.builder.appName('Dataframe').getOrCreate()"
+      ],
+      "metadata": {
+        "id": "gvDwSAjVv9V5"
+      },
+      "execution_count": 3,
       "outputs": []
     }
   ]
