--- a/leetcode75.ipynb
+++ b/leetcode75.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "leetcode75.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYWrTubTM+3a/wLY9Icm7W",
+      "authorship_tag": "ABX9TyN15Qa2mqTv8ZZqzLB8bUbH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "MGttUDNzqbNU"
       },
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "OBz1p0-FrTCU"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "a8-sYXCisJX7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,13 +136,24 @@
       "metadata": {
         "id": "cPoNTo6EwSxk"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def threeSum(nums:List):\n",
+        "  nums.sort()\n",
+        "\n",
+        "  for i in range(len(nums)):\n",
+        "    if i ==0 or (i >0 and nums[i] != nums[i-1]):\n",
+        "      left = i+1\n",
+        "      right = len(nums)-1\n",
+        "\n",
+        "      while left < right:\n",
+        "        temp = nums[i]+nums[left]+nums[right]\n",
+        "        if temp == 0:\n",
+        "          \n"
       ],
       "metadata": {
         "id": "b9aFQJXWzB6r"
@@ -168,7 +179,7 @@
         "id": "tp_YsbXPrDxe",
         "outputId": "9e7ed59f-5ac0-4b5e-eb8b-85293bb4f447"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
